# rag-search-engine

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
cli/: __init__.py  augmented_generation_cli.py  constants.py  describe_image_cli.py  evaluation_cli.py  hybrid_search_cli.py  inverted_index.py  keyword_search_cli.py  multimodal_search_cli.py  schemas.py  semantic_search_cli.py  singleton.py  utils.py
cli/api/: __init__.py  gemini_agent.py
cli/commands/: __init__.py  base.py  build_command.py  compute_bm25_idf_command.py  compute_idf_command.py  compute_tfidf_command.py  embed_commands.py  find_tf_command.py  search_command.py  term_frequency_command.py  verify_commands.py
cli/commands/compute/: __init__.py  chunk_command.py  chunk_commands.py  compute_bm25_idf_command.py  compute_bm25_tf_command.py  compute_idf_command.py  compute_tf_command.py  compute_tfidf_command.py  idf_commands.py  normalize_command.py  tf_commands.py
cli/commands/search/: __init__.py  augmented_generation_commands.py  bm25_search_command.py  embed_query_command.py  embed_text_command.py  hybrid_search_command.py  hybrid_search_commands.py  keyword_search_commands.py  multimodal_search_commands.py  search_command.py  semantic_search_command.py  verify_command.py
cli/core/: __init__.py  hybrid_search.py  keyword_search.py  multimodal_search.py  semantic_search.py
cli/schemas/: __init__.py  payloads.py  requests.py
docs/: conf.py  index.md  usage.md
docs/api/: augmented_generation_cli.md  constants.md  describe_image_cli.md  evaluation_cli.md  gemini_agent.md  hybrid_search.md  hybrid_search_cli.md  index.md  inverted_index.md  keyword_search_cli.md  multimodal_search.md  multimodal_search_cli.md  schemas.md  semantic_search.md  semantic_search_cli.md  singleton.md  utils.md
docs/api/commands/: base.md  build.md  embed.md  index.md  search.md  verify.md
docs/api/commands/compute/: bm25_idf.md  bm25_tf.md  chunk.md  idf.md  index.md  normalize.md  tf.md  tfidf.md
docs/api/commands/search/: augmented_generation_commands.md  bm25_search_command.md  hybrid_search_command.md  index.md  keyword_search_commands.md  multimodal_search_commands.md  search_command.md  semantic_search_command.md
examples/: golden_dataset.json  movies.json
tests/: test_augmented_generation_cli.py  test_describe_image_cli.py  test_evaluation_cli.py  test_gemini_agent.py  test_hybrid_search.py  test_hybrid_search_cli.py  test_inverted_index.py  test_keyword_search_cli.py  test_multimodal_search.py  test_multimodal_search_cli.py  test_requests.py  test_semantic_search.py  test_semantic_search_cli.py  test_singleton.py  test_utils.py
